tests/example_policies/andOrCombinations/andOrCombinations-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np_and
    networkPolicyList:
      - andOrCombinations-networkpolicy1.yaml
    expected_warnings: 0

  - name: np_or
    networkPolicyList:
      - andOrCombinations-networkpolicy2.yaml
    expected_warnings: 0

queries:
  - name: np1_and_np2_not_equiv
    equivalence:
      - np_and
      - np_or
    expected: 1
  - name: redundancy_np1_and_np2
    redundancy:
      - np_and
      - np_or
    expected: 0
  - name: pairwiseInterferes_np1_and_np2
    pairwiseInterferes:
      - np_and
      - np_or
    expected: 1
  - name: policies_not_empty
    emptiness:
      - np_and
      - np_or
    expected: 0
  - name: policies_not_vacuous
    vacuity:
      - np_and
      - np_or
    expected: 0
